<resources>
    <string name="app_name">Day Planner</string>
    <string name="title_list">List</string>
    <string name="title_planner">Planner</string>
    <string name="title_settings">Settings</string>

    <string name="main_planner">Plan out your day!</string>
    <string name="time">12:00 AM</string>
    <string name="fab_desc">Add Events</string>
    <string name="evt_title">Event Title*</string>
    <string name="evt_start_time">Start Time</string>
    <string name="evt_duration">Event Duration in Minutes*</string>
    <string name="evt_recurring">Recurring Event</string>
    <string name="evt_location">Event Location</string>
    <string name="start_time">Start Time (Optional)</string>
    <string name="create">Create</string>
    <string name="list_item_button_name">Add</string>
    <string name="default_time">00:00 AM</string>
    <string name="switch_default_text">No</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">You are not currently logged in!</string>
    <string name="signin">Sign in or\n Sign up</string>
    <string name="channel_name">Day Planner</string>
    <string name="channel_description">The notification channel for the Day Planner app</string>
    <string name="start_notifications">Start notifications</string>
    <string name="end_notifications">End notifications</string>
    <string name="location_services">Location Services</string>
    <string name="find_a_location"><u>Find a location!</u></string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="search_a_location">Search a location!</string>
    <string name="search">Search</string>
    <string name="map_return">Return</string>

    <string-array name="evt_recurring_options">
        <item>No</item>
        <item>Yes</item>
    </string-array>
</resources>