<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListFragment"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        android:layout_marginTop="@dimen/list_add_big_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleX="3"
        android:scaleY="3" />

    <EditText
        android:id="@+id/evt_title"
        android:textSize="26sp"
        android:maxLines="1"
        android:maxLength="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_add_padding_and_margin"
        android:paddingRight="@dimen/list_add_padding_and_margin"
        android:layout_marginLeft="@dimen/list_add_padding_and_margin"
        android:layout_marginRight="@dimen/list_add_padding_and_margin"
        android:layout_marginTop="@dimen/list_add_big_margin"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:hint="@string/evt_title" />

    <EditText
        android:id="@+id/evt_duration"
        android:textSize="26sp"
        android:maxLines="1"
        android:maxLength="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_add_padding_and_margin"
        android:paddingRight="@dimen/list_add_padding_and_margin"
        android:layout_marginLeft="@dimen/list_add_padding_and_margin"
        android:layout_marginRight="@dimen/list_add_padding_and_margin"
        android:layout_marginTop="@dimen/list_add_spacing"
        android:background="@drawable/border"
        android:inputType="number"
        android:hint="@string/evt_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evt_title" />"


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/evt_start_time_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_add_padding_and_margin"
        android:layout_marginRight="@dimen/list_add_padding_and_margin"
        android:layout_marginTop="@dimen/list_add_spacing"
        tools:ignore="ExtraText"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@id/evt_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/evt_start_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="26sp"
            android:text="@string/start_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:text="@string/switch_default_text"
            app:layout_constraintEnd_toStartOf="@id/evt_start_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/evt_start_time_text" />

        <TextView
            android:id="@+id/evt_start_time"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_add_spacing"
            android:textSize="26sp"
            android:text="@string/default_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/switch_start_time"
            app:layout_constraintTop_toBottomOf="@id/evt_start_time_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/evt_recurring_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_add_padding_and_margin"
        android:layout_marginRight="@dimen/list_add_padding_and_margin"
        android:layout_marginTop="@dimen/list_add_spacing"
        tools:ignore="ExtraText"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@id/evt_start_time_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/evt_recurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textAlignment="center"
            android:text="@string/evt_recurring"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@id/switch_recurring"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_recurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_default_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/evt_recurring"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/evt_location"
        android:textSize="26sp"
        android:maxLines="1"
        android:maxLength="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_add_padding_and_margin"
        android:paddingRight="@dimen/list_add_padding_and_margin"
        android:layout_marginLeft="@dimen/list_add_padding_and_margin"
        android:layout_marginRight="@dimen/list_add_padding_and_margin"
        android:layout_marginTop="@dimen/list_add_spacing"
        android:background="@drawable/border"
        android:hint="@string/evt_location"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evt_recurring_options" />

    <Button
        android:id="@+id/list_add_submit"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/list_add_big_margin"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evt_location" />

</androidx.constraintlayout.widget.ConstraintLayout>
<!--Compare these later-->
<!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->