<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:title="Not Signed In"
        android:background="@drawable/square_border">

<!--        <TextView-->
<!--            android:id="@+id/text_settings"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Test User"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <Button
            android:id="@+id/signout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_blue"
            android:text="@string/sign_out"
            android:layout_gravity="end"
            />
    </Toolbar>

    <ScrollView
        android:id="@+id/settings_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
        android:layout_marginTop="16dp"
        android:paddingBottom="50sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/start_notif_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="4dp"
                app:layout_constraintTop_toTopOf="@+id/settings_options">
                <TextView
                    android:id="@+id/start_notif_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/start_notifications"
                    app:layout_constraintTop_toTopOf="@+id/start_notif_options"
                    app:layout_constraintStart_toStartOf="@+id/start_notif_options"
                    app:layout_constraintBottom_toBottomOf="@+id/start_notif_options"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/start_notif_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/start_notif_options"
                    app:layout_constraintTop_toTopOf="@+id/start_notif_options"
                    app:layout_constraintBottom_toBottomOf="@+id/start_notif_options"
                    android:text="@string/no"
                    android:textSize="18sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/end_notif_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="4dp"
                app:layout_constraintTop_toBottomOf="@+id/start_notif_options">
                <TextView
                    android:id="@+id/end_notif_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/end_notifications"
                    app:layout_constraintTop_toTopOf="@+id/end_notif_options"
                    app:layout_constraintStart_toStartOf="@+id/end_notif_options"
                    app:layout_constraintBottom_toBottomOf="@+id/end_notif_options"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/end_notif_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/end_notif_options"
                    app:layout_constraintTop_toTopOf="@+id/end_notif_options"
                    app:layout_constraintBottom_toBottomOf="@+id/end_notif_options"
                    android:text="@string/no"
                    android:textSize="18sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location_serv_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="4dp"
                app:layout_constraintTop_toBottomOf="@+id/end_notif_options">
                <TextView
                    android:id="@+id/location_serv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/location_services"
                    app:layout_constraintTop_toTopOf="@+id/location_serv_options"
                    app:layout_constraintStart_toStartOf="@+id/location_serv_options"
                    app:layout_constraintBottom_toBottomOf="@+id/location_serv_options"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/location_serv_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/location_serv_options"
                    app:layout_constraintTop_toTopOf="@+id/location_serv_options"
                    app:layout_constraintBottom_toBottomOf="@+id/location_serv_options"
                    android:text="@string/no"
                    android:textSize="18sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>